added tests validators configured directories

--- a/Restoraunt/Restoraunt.Service/appsettings.json
+++ b/Restoraunt/Restoraunt.Service/appsettings.json
@@ -1,7 +1,7 @@
 
 {
   "Urls": "http://localhost:5117",
-  "FitnessClubDbContext": "Data Source=localhost;Initial Catalog=Restoraunt;Integrated Security=SSPI;Trust Server Certificate=true;",
+  "RestorauntDbContext": "Data Source=localhost;Initial Catalog=Restoraunt;Integrated Security=SSPI;Trust Server Certificate=true;",
   "IdentityServerSettings": {
     "Uri": "http://localhost:5117",
     "ClientId": "backend",
